Fix formatting, fix carousel alignment

--- a/css/prev.css
+++ b/css/prev.css
@@ -10,9 +10,11 @@ main {
         opacity: 0;
         transform: translateX(-100%);
     }
+
     50% {
         opacity: 0.5;
     }
+
     100% {
         opacity: 1;
         transform: translateX(0);
@@ -24,9 +26,11 @@ main {
         opacity: 0;
         transform: translateX(100%);
     }
+
     50% {
         opacity: 0.5;
     }
+
     100% {
         opacity: 1;
         transform: translateX(0);
@@ -38,6 +42,7 @@ main {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
@@ -67,7 +72,7 @@ main {
 
 .artist.simple img {
     animation: rotate 3s ease-in-out;
-    animation-delay: 2s; 
+    animation-delay: 2s;
     transform-origin: center;
     display: block;
     margin: auto;
@@ -92,10 +97,6 @@ main {
     margin-bottom: 5%;
 }
 
-#others {
-    max-width: 50%;
-}
-
 #others .carousel-inner {
     width: 800px;
     height: 500px;
@@ -113,7 +114,7 @@ main {
     left: 50%;
     transform: translateX(-50%);
     color: white;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     text-align: center;
     padding: 10px 20px;
     border-radius: 8px;
